# estd

./: CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  estd-config.cmake  package.xml
include/estd/: any.hpp  array.hpp  convert.hpp  heap_array.hpp  range.hpp  result.hpp  scope_guard.hpp  traits.hpp  tuple.hpp  type_name.hpp  util.hpp  utility.hpp  view.hpp
include/estd/any/: any.hpp
include/estd/array/: initialize.hpp
include/estd/convert/: conversion.hpp  convert.hpp  numerical.hpp  stl.hpp  tags.hpp  traits.hpp
include/estd/convert/stl/: array.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  set.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
include/estd/heap_array/: heap_array.hpp
include/estd/range/: enumerate.hpp  range.hpp
include/estd/range/detail/: deref_proxy.hpp
include/estd/result/: catch_string_conversions.hpp  error.hpp  in_place.hpp  result.hpp  traits.hpp  unspecified_category.hpp
include/estd/result/detail/: copyable.hpp  map.hpp  result_storage.hpp
include/estd/scope_guard/: scope_guard.hpp
include/estd/traits/: containers.hpp  decay_if.hpp  is_comparible.hpp  is_integer_sequence.hpp  is_tuple.hpp  iterator.hpp  replace_type.hpp  type_traits.hpp
include/estd/tuple/: fold.hpp  for_each.hpp  transform.hpp  tuple.hpp  zip.hpp
include/estd/type_name/: demangle.hpp  std.hpp  type_name.hpp
include/estd/type_name/std/: containers.hpp
include/estd/type_name/std/containers/: array.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  set.hpp  string.hpp  vector.hpp
include/estd/util/: integer_sequence.hpp  parameter_pack.hpp
include/estd/utility/: integer_sequence.hpp  make_ref.hpp  move_marker.hpp  parameter_pack.hpp
include/estd/view/: view.hpp
test/: CMakeLists.txt  main.cpp  static_assert_same.hpp
test/any/: CMakeLists.txt  any.cpp  delete.cpp
test/array/: CMakeLists.txt  initialize.cpp
test/convert/: CMakeLists.txt  convert.cpp  numerical.cpp  parse.cpp  stl.cpp  traits.cpp
test/heap_array/: CMakeLists.txt  heap_array.cpp
test/range/: CMakeLists.txt  enumerate.cpp  range.cpp
test/result/: CMakeLists.txt  construction.cpp  conversion.cpp  copyable.cpp  equality.cpp  error.cpp  map.cpp  observers.cpp  references.cpp  tracker.cpp  tracker.hpp  traits.cpp
test/scope_guard/: CMakeLists.txt  scope_guard.cpp
test/traits/: CMakeLists.txt  container.cpp  decay_if.cpp  is_comparible.cpp  is_integer_sequence.cpp  is_tuple.cpp  iterator.cpp  replace_type.cpp  type_traits.cpp
test/tuple/: CMakeLists.txt  fold.cpp  for_each.cpp  transform.cpp  tuple.cpp  zip.cpp
test/type_name/: CMakeLists.txt  type_name.cpp
test/util/: CMakeLists.txt  integer_sequence.cpp  parameter_pack.cpp
test/utility/: CMakeLists.txt  integer_sequence.cpp  make_ref.cpp  move_marker.cpp  parameter_pack.cpp
test/view/: CMakeLists.txt  view.cpp
