<?xml version="1.0"?>
<package format="2">
	<name>estd</name>
	<version>0.5.0</version>
	<description>Extended C++ library</description>
	<license>BSD-3-Clause</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>

	<author email="contact@fizyr.com">Fizyr B.V.</author>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>
	<test_depend>catch2</test_depend>
</package>
