function(declare_test name)
	add_executable(${name} ${ARGN})
	add_custom_target(run_${prefix}${test} COMMAND ${name})
	add_dependencies(run_tests run_${name})
	add_test(NAME ${name} COMMAND ${name})
endfunction()

function(declare_tests prefix)
	foreach(test ${ARGN})
		declare_test(${prefix}${test} ${test}.cpp)
	endforeach()
endfunction()

function(declare_compile_test name)
	add_library(${name} ${ARGN})
	add_dependencies(run_tests ${name})
endfunction()

function(declare_compile_tests prefix)
	foreach(test ${ARGN})
		declare_compile_test(${prefix}${test} ${test}.cpp)
	endforeach()
endfunction()

add_subdirectory(range)
add_subdirectory(result)
add_subdirectory(traits)
add_subdirectory(tuple)
